Change dvh to lvh to prevent jumping on mobile

--- a/style.css
+++ b/style.css
@@ -167,7 +167,7 @@ html {
 @media (max-width:950px) {
 
     .intro {
-        height: 100dvh;
+        height: 100lvh;
 
 
     }
@@ -354,9 +354,9 @@ a .view-work-button {
 .intro {
     
     display:flex;
-    min-height: 100dvh;
-    height: 100dvh;
-    max-height: 100dvh;
+    min-height: 100lvh;
+    height: 100lvh;
+    max-height: 100lvh;
     max-width: 100vw;
     flex-direction: column;
     justify-content: center;
@@ -370,7 +370,7 @@ a .view-work-button {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    min-height:100dvh;
+    min-height:100lvh;
     z-index:999;
 
 }
@@ -438,7 +438,7 @@ overflow:hidden;
 
 }
 .about {
-    min-height: 100dvh;
+    min-height: 100lvh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -448,7 +448,7 @@ overflow:hidden;
 
 
 .portfolio {
-    min-height: 100dvh;
+    min-height: 100lvh;
     
     display: flex;
     flex-direction: column;
